# CppMasteryQuest

./: .gitignore  README.md
M1/W1/: README.md  dynamicArray.h  linkedList.h  linkedListBasedTemplatedStack.h  linkedListBasedTemplatedStack_uniquePtr.h  main.cpp  templatedStackVectBased.h  templatedStackVectorBased.h  vectorBasedTemplatedStack.h
M1/W2/: README.md
M1/W2/DataAnalyzer/: .gitignore  CMakeLists.txt  README.md  main.cpp
M1/W2/DataAnalyzer/data/: sample.txt
M1/W2/DataAnalyzer/include/: Analyzer.h  utils.h
M1/W2/DataAnalyzer/src/: Analyzer.cpp  utils.cpp
M1/W2/DataAnalyzer/tests/: test_analyzer.cpp  test_utils.cpp
M1/W2/STLToolbox/: Makefile  README.md  data_analyzer
M1/W2/STLToolbox/include/: cli.h  data_processing.h  file_io.h  statistics.h
M1/W2/STLToolbox/src/: cli.cpp  data_processing.cpp  file_io.cpp  main.cpp  statistics.cpp
M1/W2/STLToolbox/tests/: test_cli.cpp  test_data_processing.cpp  test_file_io.cpp  test_statistics.cpp
M1/W3/: README.md
M1/W3/CustomSmartPointer/: CMakeLists.txt  README.md
M1/W3/CustomSmartPointer/include/: MemoryPool.h  SharedPtr.h  WeakPtr.h
M1/W3/CustomSmartPointer/src/: main.cpp
M1/W3/CustomSmartPointer/tests/: MemoryPoolTests.cpp  SharedPtrTests.cpp  WeakPtrTests.cpp
M1/W3/MemoryMastery/: CMakeLists.txt  README.md  main.cpp
M1/W3/MemoryMastery/include/: MemoryPool.h  MySharedPtr.h  SimpleAllocator.h
M1/W3/MemoryMastery/src/: MemoryPool.cpp  MySharedPtr.cpp
M1/W3/MemoryMastery/tests/: test_allocator.cpp  test_pool.cpp  test_shared_ptr.cpp
M1/W4/: README.md
M1/W4/PluginSystem/: CMakeLists.txt  README.md
M1/W4/PluginSystem/include/: IPlugin.h  IPluginAPI.h  IPluginManager.h
M1/W4/PluginSystem/include/Animal/: Animal.h
M1/W4/PluginSystem/include/CLI/: Menu.h
M1/W4/PluginSystem/include/Management/: Habitat.h  Visitor.h
M1/W4/PluginSystem/plugins/: CMakeLists.txt
M1/W4/PluginSystem/plugins/EchoPlugin/: CMakeLists.txt  EchoPlugin.cpp
M1/W4/PluginSystem/plugins/MathPlugin/: CMakeLists.txt  MathPlugin.cpp
M1/W4/PluginSystem/src/: CMakeLists.txt  PluginManager.cpp  main.cpp
M1/W4/PluginSystem/src/Animal/: Bird.cpp  Reptile.cpp
M1/W4/PluginSystem/src/Management/: Visitor.cpp
M1/W4/PluginSystem/src/Utils/: AnimalFactory.cpp
M1/W4/PluginSystem/tests/: AnimalTests.cpp  CMakeLists.txt  FeedingScheduleTests.cpp  HabitatTests.cpp  MenuTests.cpp  VisitorTests.cpp  ZooSettingsTests.cpp  test_loading.cpp
M1/W4/ZoomManagementSystem/: README.md
M1/W4/ZoomManagementSystem/include/Animal/: Bird.h  Mammal.h  Reptile.h
M1/W4/ZoomManagementSystem/include/Management/: FeedingSchedule.h
M1/W4/ZoomManagementSystem/include/Utils/: AnimalFactory.h  ZooSettings.h
M1/W4/ZoomManagementSystem/src/: main.cpp
M1/W4/ZoomManagementSystem/src/Animal/: Animal.cpp  Mammal.cpp
M1/W4/ZoomManagementSystem/src/CLI/: Menu.cpp
M1/W4/ZoomManagementSystem/src/Management/: FeedingSchedule.cpp  Habitat.cpp
M1/W4/ZoomManagementSystem/src/Utils/: ZooSettings.cpp
M1/W4/ZoomManagementSystem/tests/: AnimalFactoryTests.cpp
